fix sidebar form layout issue

--- a/react/src/components/sidebar/sidebar.css
+++ b/react/src/components/sidebar/sidebar.css
@@ -74,13 +74,15 @@
     margin-top: 3%;
 }
 .crash-map-charts-fieldset{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background: #fcfcfc;
     border: 1px solid #f4a22d;
 }
 .crash-map-fieldset-subgroup{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.crash-map-label-subgroup{
     width: 80%;
 }
 .crash-map-first-input{
